--- a/35 - Secrets - Starting Code/views/partials/footer.ejs
+++ b/35 - Secrets - Starting Code/views/partials/footer.ejs
@@ -1,4 +1,11 @@
-
+<!--
 
 </body>
-</html>
+<center>
+
+<h5>© Arvind's blog. All rights reserved @ <a href="https://arvindunimap.wordpress.com/">arvindunimap.wordpress.com</a>
+</h5>
+
+</center>
+
+</html> -->
